# wordle_rust

./: Cargo.toml
src/: GameData.rs  ScreenState.rs  main.rs
